--- a/css/styles.css
+++ b/css/styles.css
@@ -40,14 +40,29 @@ header {
   padding: 94px 0;
 }
 
-.container.container-header {
+.main-button {
+  width: 200px;
+  height: 50px;
+  background-color: var(--action-color);
+  color: #fff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+}
+
+.container.header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
 }
 
-.navigation-header {
+.navigation {
   display: flex;
   align-items: center;
 }
@@ -62,16 +77,16 @@ header {
   margin-right: 93px;
 }
 
-.logo-part {
+.logo__part {
   color: var(--action-color);
 }
 
-.navigation {
+.navigation__list {
   display: flex;
   column-gap: 46px;
 }
 
-.navigation_item {
+.navigation__item {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
@@ -79,12 +94,12 @@ header {
   color: var(--font-color);
 }
 
-.navigation_item.is-active {
+.navigation__item--is-active {
   color: var(--action-color);
   position: relative;
 }
 
-.navigation_item.is-active::after {
+.navigation__item--is-active::after {
   position: absolute;
   top: 44.41px;
   left: 0;
@@ -95,17 +110,17 @@ header {
   background: var(--action-color);
 }
 
-.contact-header {
+.header-contact {
   display: flex;
   align-content: center;
   column-gap: 50px;
 }
 
-.contact-icon {
+.header-contact__icon {
   fill: var(--description-color);
 }
 
-.contact-header_item {
+.header-contact__item {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -131,11 +146,11 @@ header {
   background-repeat: no-repeat;
 }
 
-.container.slogan-container {
+.container.slogan-section__container {
   text-align: center;
 }
 
-.slogan {
+.slogan-section__slogan {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -144,32 +159,21 @@ header {
   margin-bottom: 30px;
 }
 
-.button-main {
-  width: 200px;
-  height: 50px;
-  background-color: var(--action-color);
-  color: #fff;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
+.slogan-section__button {
   text-align: center;
 }
-.introduction {
+
+.introduction-section {
   padding-bottom: 0;
 }
-.container-introduction {
+.introduction-section__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 30px;
 }
 
-.introduction-picture {
+.introduction-section__picture {
   height: 120px;
   width: 270px;
   border-radius: 4px;
@@ -180,7 +184,7 @@ header {
   align-items: center;
 }
 
-.introduction_title {
+.introduction-section__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -188,7 +192,7 @@ header {
   margin-bottom: 10px;
 }
 
-.introduction_description {
+.introduction-section__description {
   color: var(--description-color);
   font-size: 14px;
   line-height: 1.71;
@@ -197,7 +201,7 @@ header {
   width: 270px;
 }
 
-.section_title {
+.section__title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -205,24 +209,24 @@ header {
   text-align: center;
   margin-bottom: 50px;
 }
-.container-activities {
+.activities-section__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 30px;
 }
 
-.activity-image {
+.activities-section__card {
   display: block;
   height: 294px;
   position: relative;
 }
 
-.activity-image img {
+.activities-section__card img {
   height: 100%;
 }
 
-.activity-description {
+.activities-section__description-box {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -233,7 +237,7 @@ header {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.activity-text {
+.activities-section__description {
   color: #fff;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
@@ -242,18 +246,18 @@ header {
   letter-spacing: 0.03em;
 }
 
-.team {
+.team-section {
   background-color: #f5f4fa;
   padding-top: 94px;
 }
 
-.container-team {
+.team-section__wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   column-gap: 30px;
 }
-.team_card {
+.team-section__card {
   background-color: #fff;
   text-align: center;
   width: 270px;
@@ -261,7 +265,7 @@ header {
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.team_name {
+.team-section__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -270,7 +274,7 @@ header {
   margin-top: 30px;
 }
 
-.team_description {
+.team-section__description {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -278,7 +282,7 @@ header {
   margin-bottom: 16px;
 }
 
-.team-socialmedia {
+.team-section__socialmedia-wrapper {
   margin-bottom: 30px;
   display: flex;
   justify-content: center;
@@ -286,7 +290,7 @@ header {
   column-gap: 10px;
 }
 
-.team-socialmedia-icon-wrap {
+.team-section__icon-box {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -296,17 +300,17 @@ header {
   align-items: center;
 }
 
-.team-socialmedia-icon {
+.team-section__icon {
   fill: #afb1b8;
 }
 
-.logo-cards {
+.clients-section__wrapper {
   display: flex;
   align-items: center;
   column-gap: 30px;
 }
 
-.logo-space {
+.clients-section__card {
   height: 92px;
   width: 170px;
   border-radius: 4px;
@@ -316,21 +320,21 @@ header {
   align-items: center;
 }
 
-.logo-icon {
+.clients-section__icon {
   fill: #afb1b8;
 }
 
-.logo-space:hover,
-.logo-space:focus {
+.clients-section__card:hover,
+.clients-section__card:focus {
   border-color: var(--action-color);
 }
 
-.logo-space:hover .logo-icon,
-.logo-space:focus .logo-icon {
+.clients-section__card:hover .clients-section__icon,
+.clients-section__card:focus .clients-section__icon {
   fill: var(--action-color);
 }
 
-.buttons-section {
+.project-section__buttons-wrapper {
   display: flex;
   justify-content: center;
   padding-bottom: 50px;
@@ -358,26 +362,26 @@ header {
   border-radius: 4px;
 }
 
-.container-projects {
+.project-section__projects-wrapper {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   padding: 0;
 }
 
-.project_card {
+.project-section__card {
   flex-basis: calc((100% - 60px) / 3);
   border: #eeeeee solid 1px;
   padding-bottom: 20px;
 }
 
-.project-window {
+.project-section__window {
   position: relative;
   overflow: hidden;
   height: 294px;
 }
 
-.project-overlay {
+.project-section__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -391,7 +395,7 @@ header {
   transition-duration: 250ms;
 }
 
-.project-overlay > p {
+.project-section__overlay > p {
   font-family: "Roboto", sans-serif;
   color: #fff;
   font-size: 18px;
@@ -401,22 +405,22 @@ header {
   margin-left: 24px;
 }
 
-.project_card img {
+.project-section__card img {
   width: 100%;
 }
 
-.project_card:hover .project-overlay,
-.project_card:focus .project-overlay {
+.project-section__card:hover .project-section__overlay,
+.project-section__card:focus .project-section__overlay {
   transform: translateY(0);
 }
 
-.project_card:hover,
-.project_card:focus {
+.project-section__card:hover,
+.project-section__card:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.project_name {
+.project-section__name {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -426,7 +430,7 @@ header {
   margin-top: 20px;
 }
 
-.project_description {
+.project-section__description {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
@@ -440,7 +444,7 @@ footer {
   padding-bottom: 60px;
 }
 
-.flex-footer {
+.footer-container {
   display: flex;
   justify-content: start;
   column-gap: 70px;
@@ -454,15 +458,15 @@ footer {
   letter-spacing: 0.03em;
   color: #fff;
 }
-.contact-footer {
+.footer-contact {
   margin-top: 20px;
 }
 
-.contact-footer_wrap > li:not(:last-child) {
+.footer-contact__wrapper > li:not(:last-child) {
   margin-bottom: 9px;
 }
 
-.contact-footer_address {
+.footer-contact__address {
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
@@ -470,7 +474,7 @@ footer {
   color: #fff;
 }
 
-.contact-footer_item {
+.footer-contact__item {
   font-size: 14px;
   font-style: normal;
   line-height: 1.71;
@@ -478,7 +482,7 @@ footer {
   color: var(--footer-item-color);
 }
 
-.socialmedia-text {
+.socialmedia-contact__text {
   color: #fff;
   font-size: 14px;
   font-weight: 700;
@@ -487,12 +491,12 @@ footer {
   margin-bottom: 20px;
 }
 
-.footer-socialmedia {
+.socialmedia-contact__icon-wrapper {
   display: flex;
   column-gap: 10px;
 }
 
-.footer-socialmedia-icon-wrap {
+.socialmedia-contact__icon-box {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -502,10 +506,10 @@ footer {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-.footer-socialmedia-icon {
+.socialmedia-contact__icon {
   fill: #fff;
 }
-.label-newsletter {
+.newsletter__label {
   display: block;
   color: #fff;
   font-size: 14px;
@@ -515,12 +519,12 @@ footer {
   margin-bottom: 20px;
 }
 
-.newsletter-form-wrap {
+.newsletter__wrapper {
   display: flex;
   column-gap: 12px;
 }
 
-.e-mail-input {
+.newsletter__e-mail-input {
   background-color: var(--footer-background-color);
   height: 50px;
   width: 358px;
@@ -531,56 +535,44 @@ footer {
   color: #f8f8f8;
 }
 
-.e-mail-input::placeholder {
+.newsletter__e-mail-input::placeholder {
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
 
-.button-newsletter {
-  width: 200px;
-  height: 50px;
-  background-color: var(--action-color);
-  color: #fff;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
+.newsletter__button {
   padding-left: 42px;
   display: flex;
   align-items: center;
 }
 
-.icon-send {
+.newsletter__icon {
   fill: #fff;
   margin-left: 24px;
 }
 
-.contact-header_item:hover .contact-icon,
-.contact-header_item:focus .contact-icon {
+.header-contact__item:hover .header-contact__icon,
+.header-contact__item:focus .header-contact__icon {
   fill: var(--action-color);
 }
 
-.navigation_item:hover,
-.navigation_item:focus,
-.contact-header_item:hover,
-.contact-header_item:focus,
-.contact-footer_item:hover,
-.contact-footer_item:focus {
+.navigation__item:hover,
+.navigation__item:focus,
+.header-contact__item:hover,
+.header-contact__item:focus,
+.footer-contact__item:hover,
+.footer-contact__item:focus {
   color: var(--action-color);
 }
 
-.socialmedia-icon-wrap:hover,
-.socialmedia-icon-wrap:focus {
+.socialmedia-icon__box:hover,
+.socialmedia-icon__box:focus {
   background-color: var(--action-color);
 }
 
-.socialmedia-icon-wrap:hover .socialmedia-icon,
-.socialmedia-icon-wrap:focus .socialmedia-icon {
+.socialmedia-icon__box:hover .socialmedia-icon,
+.socialmedia-icon__box:focus .socialmedia-icon {
   fill: #fff;
 }
 
@@ -630,7 +622,7 @@ footer {
   align-items: center;
 }
 
-.form_title {
+.service-form__title {
   font-size: 20px;
   font-weight: 700;
   line-height: 1.17;
@@ -641,7 +633,7 @@ footer {
   margin-bottom: 12px;
 }
 
-.input_label {
+.service-form__label {
   font-size: 12px;
   line-height: 1.17;
   color: var(--description-color);
@@ -652,12 +644,12 @@ footer {
   width: 448px;
 }
 
-.input_wrap {
+.service-form__input-wrapper {
   position: relative;
   margin-bottom: 10px;
 }
 
-.input_box {
+.service-form__input-box {
   width: 448px;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -666,7 +658,7 @@ footer {
   outline: none;
 }
 
-.form_icon {
+.service-form__icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -674,7 +666,7 @@ footer {
   fill: #212121;
 }
 
-.form_textarea {
+.service-form__textarea {
   width: 448px;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -686,35 +678,35 @@ footer {
   outline: none;
 }
 
-.form_textarea::placeholder {
+.service-form__textarea::placeholder {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
 
-.input_box:focus,
-.input_box:hover,
-.form_textarea:focus,
-.form_textarea:hover {
+.service-form__input-box:focus,
+.service-form__input-box:hover,
+.service-form__textarea:focus,
+.service-form__textarea:hover {
   border-color: var(--action-color);
 }
 
-.input_box:focus + .form_icon,
-.input_box:hover + .form_icon {
+.service-form__input-box:focus + .service-form__icon,
+.service-form__input-box:hover + .service-form__icon {
   fill: var(--action-color);
 }
 
-.input_box:not(:placeholder-shown),
-.form_textarea:not(:placeholder-shown) {
+.service-form__input-box:not(:placeholder-shown),
+.service-form__textarea:not(:placeholder-shown) {
   border-color: var(--action-color);
 }
 
-.input_box:not(:placeholder-shown) + .form_icon {
+.service-form__input-box:not(:placeholder-shown) + .service-form__icon {
   fill: var(--action-color);
 }
 
-.checkbox_label {
+.service-form__checkbox-label {
   display: flex;
   align-items: center;
   -webkit-user-select: none;
@@ -728,13 +720,13 @@ footer {
   margin-bottom: 30px;
 }
 
-.checkbox_box {
+.service-form__checkbox-box {
   opacity: 0;
   height: 0;
   width: 0;
 }
 
-.checkmark {
+.service-form__checkmark {
   position: relative;
   border: 2px solid rgba(33, 33, 33, 1);
   border-radius: 2px;
@@ -742,7 +734,7 @@ footer {
   height: 15px;
   margin-right: 8px;
 }
-.accept_icon {
+.service-form__accept-icon {
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -750,17 +742,26 @@ footer {
   transform: translate(-50%, -50%);
 }
 
-.checkbox_label .checkbox_box:checked ~ .checkmark {
+.service-form__checkbox-label
+  .service-form__checkbox-box:checked
+  ~ .service-form__checkmark {
   background-color: var(--action-color);
   border: var(--action-color);
 }
 
-.checkbox_label .checkbox_box:checked ~ .checkmark > .accept_icon {
+.service-form__checkbox-label
+  .service-form__checkbox-box:checked
+  ~ .service-form__checkmark
+  > .service-form__accept-icon {
   opacity: 1;
   fill: #fff;
 }
 
-.checbox_string {
+.service-form__checbox-string {
   color: var(--action-color);
   text-decoration: underline;
+}
+
+.service-form__button {
+  text-align: center;
 }
