--- a/sass/components/_activities-section.scss
+++ b/sass/components/_activities-section.scss
@@ -10,10 +10,10 @@
     display: block;
     height: 294px;
     position: relative;
+  }
 
-    img {
-      height: 100%;
-    }
+  &__picture {
+    height: 100%;
   }
 
   &__description-box {
