--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -17,33 +17,33 @@ header {
     display: flex;
     column-gap: 46px;
   }
-}
 
-.navigation__item {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: $fontColor;
+  &__item {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: $fontColor;
 
-  &:hover,
-  &:focus {
-    color: $actionColor;
-  }
+    &:hover,
+    &:focus {
+      color: $actionColor;
+    }
 
-  &--is-active {
-    color: $actionColor;
-    position: relative;
+    &--is-active {
+      color: $actionColor;
+      position: relative;
 
-    &::after {
-      position: absolute;
-      top: 44.41px;
-      left: 0;
-      content: "";
-      height: 4px;
-      width: 100%;
-      border-radius: 2px;
-      background: $actionColor;
+      &::after {
+        position: absolute;
+        top: 44.41px;
+        left: 0;
+        content: "";
+        height: 4px;
+        width: 100%;
+        border-radius: 2px;
+        background: $actionColor;
+      }
     }
   }
 }
@@ -66,16 +66,14 @@ header {
     display: flex;
     align-items: center;
     column-gap: 10px;
-  }
-}
 
-.header-contact__item {
-  &:hover,
-  &:focus {
-    color: $actionColor;
+    &:hover,
+    &:focus {
+      color: $actionColor;
 
-    .header-contact__icon {
-      fill: $actionColor;
+      .header-contact__icon {
+        fill: $actionColor;
+      }
     }
   }
 }
