--- a/sass/components/_project-section.scss
+++ b/sass/components/_project-section.scss
@@ -1,6 +1,4 @@
 .project-section {
-  width: 100%;
-
   &__buttons-wrapper {
     display: flex;
     justify-content: center;
@@ -21,6 +19,10 @@
     padding-bottom: 20px;
   }
 
+  &__picture {
+    width: 100%;
+  }
+
   &__window {
     position: relative;
     overflow: hidden;
@@ -39,16 +41,16 @@
     transition-property: transform;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
+  }
 
-    > p {
-      font-family: "Roboto", sans-serif;
-      color: #fff;
-      font-size: 18px;
-      line-height: 1.56;
-      letter-spacing: 0.03em;
-      text-align: left;
-      margin-left: 24px;
-    }
+  &__overlay-description {
+    font-family: "Roboto", sans-serif;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    text-align: left;
+    margin-left: 24px;
   }
 
   &__name {
@@ -71,10 +73,6 @@
 }
 
 .project-section__card {
-  img {
-    width: 100%;
-  }
-
   &:hover,
   &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
